--- a/pom.xml
+++ b/pom.xml
@@ -82,22 +82,34 @@
               <version>2.22.2</version>
               <configuration>
                   <testFailureIgnore>false</testFailureIgnore>
-                  <!-- Will use AspectJ defined on SpringBoot -->
                   <argLine>
                       -Dfile.encoding=UTF-8
                       -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                   </argLine>
                   <systemPropertyVariables>
                       <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+
                       <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
+                      <junit.jupiter.execution.parallel.enabled>true</junit.jupiter.execution.parallel.enabled>
+                      <junit.jupiter.execution.parallel.config.strategy>dynamic</junit.jupiter.execution.parallel.config.strategy>
                   </systemPropertyVariables>
               </configuration>
               <dependencies>
-                  <dependency>
-                      <groupId>org.junit.platform</groupId>
-                      <artifactId>junit-platform-surefire-provider</artifactId>
-                      <version>1.3.2</version>
-                  </dependency>
+                <dependency>
+                  <groupId>org.aspectj</groupId>
+                  <artifactId>aspectjweaver</artifactId>
+                  <version>1.9.1</version>
+                </dependency>
+                <dependency>
+                  <groupId>org.junit.jupiter</groupId>
+                  <artifactId>junit-jupiter-api</artifactId>
+                  <version>5.7.1</version>
+                </dependency>
+                <dependency>
+                  <groupId>org.junit.jupiter</groupId>
+                  <artifactId>junit-jupiter-engine</artifactId>
+                  <version>5.7.1</version>
+                </dependency>
               </dependencies>
           </plugin>
 
