--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,13 +48,13 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-#      - name: Build and analyze
-#        if: always()
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#        run: mvn -Psonarqube -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-#        continue-on-error: true
+      - name: Build and analyze
+        if: always()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify -Denv=github
+        continue-on-error: true
 
       #Allure
       - name: Get Allure history
