--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Main pipeline
 
 on:
   push:
-    branches:
+    branches-ignore:
       - '!master'
   pull_request:
     types: [ opened, synchronize, reopened ]
