--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Main pipeline
 
 on:
   push:
-    branches-ignore:
-      - master
+    branches:
+      - '!master'
   pull_request:
     types: [ opened, synchronize, reopened ]
 jobs:
