--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
   pull_request:
-    branches:
-      - '!master'
+    branches-ignore:
+      - master
     types: [ opened, synchronize, reopened ]
 
 jobs:
