--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,9 @@ on:
     branches:
       - master
   pull_request:
-    branches-ignore:
+    branches:
       - master
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   autotests:
